# OnionRing

./: CMakeLists.txt  LICENSE  README.md
OnionLoader/: CMakeLists.txt  Loader.cpp  Loader.h  LuaApp.cpp  LuaApp.h  main.cpp
OnionRing/: CMakeLists.txt
OnionRing/Rendering/: OnionRenderer.cpp  OnionRenderer.h  PixelBuffer.cpp  PixelBuffer.h  Raytracer.cpp  Raytracer.h
OnionRing/System/: EngineTypes.h  Environment.cpp  Environment.h  InputManager.cpp  InputManager.h  PlatformIncludes.h  SDLWindow.cpp  SDLWindow.h  Window.cpp  Window.h
OnionRing/Utils/: AABoundingBox.h  BcString.cpp  BcString.h  BcVector.h  ConfigSet.h  EngineMacros.h  Math.h  Octree.h  PngLoader.cpp  PngLoader.h  ShaderProgram.cpp  ShaderProgram.h  Singleton.h  Sphere.cpp  Sphere.h
OnionRing/Utils/Math/: Functions.cpp  Functions.h  Mat3.h  Mat4.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
TestGame/: InputTest.lua  conf.lua  main.lua  test.lua
cmake-extras/: FindGL.cmake
dependencies/: CMakeLists.txt
dependencies/lua/: CMakeLists.txt
dependencies/soil/: CMakeLists.txt
dependencies/z/: CMakeLists.txt
