CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(MC_DEPEND_SUB_DIRS "")

SET(MC_DEPEND_SUB_DIRS ${MC_DEPEND_SUB_DIRS} glew)
SET(MC_DEPEND_SUB_DIRS ${MC_DEPEND_SUB_DIRS} glfw)
SET(MC_DEPEND_SUB_DIRS ${MC_DEPEND_SUB_DIRS} z)
SET(MC_DEPEND_SUB_DIRS ${MC_DEPEND_SUB_DIRS} soil)

FOREACH(TMP ${MC_DEPEND_SUB_DIRS})
	ADD_SUBDIRECTORY(${TMP})
ENDFOREACH()


